syntax = "proto3";

service Cal {
  rpc Add(AddRequest) returns (ResultReply) {}
  rpc Multiply(MultiplyRequest) returns (ResultReply) {}
  rpc Predict_Corpus(CorpusVoc) returns (ResultFeature) {}
}

message AddRequest {
  int32 number1  = 1;
  int32 number2  = 2;
}

message MultiplyRequest {
  int32 number1  = 1;
  int32 number2  = 2;
}

message Feature {
    repeated int32 pixel = 1;
}

message CorpusVoc {
     message Voc{
     repeated int32 voc = 1;
     }
     repeated Voc values = 1;  //发送二维语料向量
}

message ResultReply {
  int32 number = 1;
}

message ResultFeature {
     message Result{
        repeated float bytes_result = 1;
     }
     repeated Result results = 1; //接收二维语料向量
}